--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -107,7 +107,6 @@ allow 2001:67c:e60:c0c:192:42:116:217;
 allow 2001:67c:e60:c0c:192:42:116:218;
 allow 2001:67c:e60:c0c:192:42:116:219;
 allow 2001:b011:4006:545c::b;
-allow 2001:b030:2422::7234;
 allow 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 allow 2001:bf0:666::666;
 allow 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -433,6 +432,7 @@ allow 2a04:52c0:103:412::1;
 allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -661,8 +661,6 @@ allow 2a0e:97c0:470::28;
 allow 2a0e:97c0:470::30;
 allow 2a0e:b107:dd0::3:fa35:9316;
 allow 2a0e:bfc0:0:11::796d;
-allow 2a0e:bfc0:0:14::24a8;
-allow 2a0e:bfc0:0:2::8a62;
 allow 2a0e:bfc0:0:5::2;
 allow 2a0e:bfc2:0:2c::1;
 allow 2a0e:bfc7:0:3::2d83;
@@ -720,6 +718,7 @@ allow 2a12:a800:2:1:45:138:16:42;
 allow 2a12:a800:2:1:45:138:16:69;
 allow 2a12:a800:2:1:45:138:16:76;
 allow 2a12:a800:2:1:45:141:215:110;
+allow 2a12:a800:2:1:45:141:215:111;
 allow 2a12:a800:2:1:45:141:215:114;
 allow 2a12:a800:2:1:45:141:215:167;
 allow 2a12:a800:2:1:45:141:215:169;
@@ -727,6 +726,7 @@ allow 2a12:a800:2:1:45:141:215:17;
 allow 2a12:a800:2:1:45:141:215:19;
 allow 2a12:a800:2:1:45:141:215:200;
 allow 2a12:a800:2:1:45:141:215:21;
+allow 2a12:a800:2:1:45:141:215:28;
 allow 2a12:a800:2:1:45:141:215:40;
 allow 2a12:a800:2:1:45:141:215:56;
 allow 2a12:a800:2:1:45:141:215:61;
