--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -122,7 +122,6 @@ set_real_ip_from 109.71.252.88;
 set_real_ip_from 109.71.252.97;
 set_real_ip_from 114.172.205.8;
 set_real_ip_from 114.35.245.150;
-set_real_ip_from 118.163.74.160;
 set_real_ip_from 121.78.28.166;
 set_real_ip_from 123.253.35.32;
 set_real_ip_from 124.198.131.108;
@@ -719,7 +718,6 @@ set_real_ip_from 2001:67c:e60:c0c:192:42:116:217;
 set_real_ip_from 2001:67c:e60:c0c:192:42:116:218;
 set_real_ip_from 2001:67c:e60:c0c:192:42:116:219;
 set_real_ip_from 2001:b011:4006:545c::b;
-set_real_ip_from 2001:b030:2422::7234;
 set_real_ip_from 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 set_real_ip_from 2001:bf0:666::666;
 set_real_ip_from 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -915,6 +913,7 @@ set_real_ip_from 23.191.200.16;
 set_real_ip_from 23.191.200.17;
 set_real_ip_from 23.191.200.18;
 set_real_ip_from 23.191.200.19;
+set_real_ip_from 23.191.200.2;
 set_real_ip_from 23.191.200.20;
 set_real_ip_from 23.191.200.21;
 set_real_ip_from 23.191.200.22;
@@ -922,11 +921,10 @@ set_real_ip_from 23.191.200.23;
 set_real_ip_from 23.191.200.24;
 set_real_ip_from 23.191.200.25;
 set_real_ip_from 23.191.200.26;
-set_real_ip_from 23.191.200.29;
-set_real_ip_from 23.191.200.3;
-set_real_ip_from 23.191.200.4;
-set_real_ip_from 23.191.200.5;
-set_real_ip_from 23.191.200.6;
+set_real_ip_from 23.191.200.27;
+set_real_ip_from 23.191.200.28;
+set_real_ip_from 23.191.200.30;
+set_real_ip_from 23.191.200.31;
 set_real_ip_from 23.191.200.7;
 set_real_ip_from 23.191.200.8;
 set_real_ip_from 23.191.200.9;
@@ -1260,6 +1258,7 @@ set_real_ip_from 2a04:52c0:103:412::1;
 set_real_ip_from 2a04:52c0:103:5acd::1;
 set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
+set_real_ip_from 2a04:52c0:105:d7eb::1;
 set_real_ip_from 2a04:52c0:106:394:e813:c39a:9eb9:d95b;
 set_real_ip_from 2a04:52c0:106:d219::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
@@ -1488,8 +1487,6 @@ set_real_ip_from 2a0e:97c0:470::28;
 set_real_ip_from 2a0e:97c0:470::30;
 set_real_ip_from 2a0e:b107:dd0::3:fa35:9316;
 set_real_ip_from 2a0e:bfc0:0:11::796d;
-set_real_ip_from 2a0e:bfc0:0:14::24a8;
-set_real_ip_from 2a0e:bfc0:0:2::8a62;
 set_real_ip_from 2a0e:bfc0:0:5::2;
 set_real_ip_from 2a0e:bfc2:0:2c::1;
 set_real_ip_from 2a0e:bfc7:0:3::2d83;
@@ -1547,6 +1544,7 @@ set_real_ip_from 2a12:a800:2:1:45:138:16:42;
 set_real_ip_from 2a12:a800:2:1:45:138:16:69;
 set_real_ip_from 2a12:a800:2:1:45:138:16:76;
 set_real_ip_from 2a12:a800:2:1:45:141:215:110;
+set_real_ip_from 2a12:a800:2:1:45:141:215:111;
 set_real_ip_from 2a12:a800:2:1:45:141:215:114;
 set_real_ip_from 2a12:a800:2:1:45:141:215:167;
 set_real_ip_from 2a12:a800:2:1:45:141:215:169;
@@ -1554,6 +1552,7 @@ set_real_ip_from 2a12:a800:2:1:45:141:215:17;
 set_real_ip_from 2a12:a800:2:1:45:141:215:19;
 set_real_ip_from 2a12:a800:2:1:45:141:215:200;
 set_real_ip_from 2a12:a800:2:1:45:141:215:21;
+set_real_ip_from 2a12:a800:2:1:45:141:215:28;
 set_real_ip_from 2a12:a800:2:1:45:141:215:40;
 set_real_ip_from 2a12:a800:2:1:45:141:215:56;
 set_real_ip_from 2a12:a800:2:1:45:141:215:61;
@@ -1638,6 +1637,7 @@ set_real_ip_from 45.138.16.42;
 set_real_ip_from 45.138.16.69;
 set_real_ip_from 45.138.16.76;
 set_real_ip_from 45.141.215.110;
+set_real_ip_from 45.141.215.111;
 set_real_ip_from 45.141.215.114;
 set_real_ip_from 45.141.215.167;
 set_real_ip_from 45.141.215.169;
@@ -1645,6 +1645,7 @@ set_real_ip_from 45.141.215.17;
 set_real_ip_from 45.141.215.19;
 set_real_ip_from 45.141.215.200;
 set_real_ip_from 45.141.215.21;
+set_real_ip_from 45.141.215.28;
 set_real_ip_from 45.141.215.40;
 set_real_ip_from 45.141.215.56;
 set_real_ip_from 45.141.215.61;
@@ -1723,8 +1724,6 @@ set_real_ip_from 45.9.168.18;
 set_real_ip_from 45.9.168.192;
 set_real_ip_from 45.94.31.68;
 set_real_ip_from 45.95.169.104;
-set_real_ip_from 45.95.169.109;
-set_real_ip_from 45.95.169.110;
 set_real_ip_from 45.95.169.252;
 set_real_ip_from 46.165.243.36;
 set_real_ip_from 46.23.109.25;
@@ -1746,8 +1745,8 @@ set_real_ip_from 51.81.222.62;
 set_real_ip_from 5.181.80.107;
 set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.95.34;
-set_real_ip_from 52.248.71.67;
 set_real_ip_from 5.253.247.27;
+set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.101.131;
 set_real_ip_from 5.255.103.235;
@@ -1781,6 +1780,7 @@ set_real_ip_from 5.45.98.162;
 set_real_ip_from 57.128.212.103;
 set_real_ip_from 57.128.220.107;
 set_real_ip_from 57.129.91.235;
+set_real_ip_from 5.79.66.19;
 set_real_ip_from 5.8.18.30;
 set_real_ip_from 5.8.18.99;
 set_real_ip_from 62.171.137.169;
@@ -1882,6 +1882,7 @@ set_real_ip_from 91.219.236.91;
 set_real_ip_from 91.219.237.39;
 set_real_ip_from 91.92.109.126;
 set_real_ip_from 91.92.109.43;
+set_real_ip_from 92.113.144.149;
 set_real_ip_from 92.243.24.163;
 set_real_ip_from 92.246.84.133;
 set_real_ip_from 93.113.25.239;
