--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -60,6 +60,7 @@ set_real_ip_from 104.254.90.195;
 set_real_ip_from 107.174.146.25;
 set_real_ip_from 107.189.10.175;
 set_real_ip_from 107.189.1.111;
+set_real_ip_from 107.189.11.111;
 set_real_ip_from 107.189.1.160;
 set_real_ip_from 107.189.1.228;
 set_real_ip_from 107.189.12.3;
@@ -75,6 +76,7 @@ set_real_ip_from 107.189.1.9;
 set_real_ip_from 107.189.2.108;
 set_real_ip_from 107.189.29.103;
 set_real_ip_from 107.189.29.184;
+set_real_ip_from 107.189.30.236;
 set_real_ip_from 107.189.30.49;
 set_real_ip_from 107.189.30.69;
 set_real_ip_from 107.189.30.86;
@@ -83,10 +85,8 @@ set_real_ip_from 107.189.31.33;
 set_real_ip_from 107.189.4.12;
 set_real_ip_from 107.189.4.209;
 set_real_ip_from 107.189.5.121;
-set_real_ip_from 107.189.5.188;
 set_real_ip_from 107.189.5.249;
 set_real_ip_from 107.189.5.7;
-set_real_ip_from 107.189.6.124;
 set_real_ip_from 107.189.7.144;
 set_real_ip_from 107.189.7.168;
 set_real_ip_from 107.189.8.133;
@@ -197,6 +197,7 @@ set_real_ip_from 172.104.186.73;
 set_real_ip_from 172.104.243.155;
 set_real_ip_from 172.105.174.195;
 set_real_ip_from 172.105.20.12;
+set_real_ip_from 172.105.203.121;
 set_real_ip_from 172.232.209.254;
 set_real_ip_from 172.233.82.41;
 set_real_ip_from 172.234.228.174;
@@ -213,7 +214,6 @@ set_real_ip_from 176.58.121.177;
 set_real_ip_from 176.58.89.182;
 set_real_ip_from 176.65.148.133;
 set_real_ip_from 176.65.148.3;
-set_real_ip_from 176.65.149.100;
 set_real_ip_from 176.65.149.84;
 set_real_ip_from 176.65.149.87;
 set_real_ip_from 176.65.149.88;
@@ -289,7 +289,6 @@ set_real_ip_from 185.165.171.84;
 set_real_ip_from 185.170.114.25;
 set_real_ip_from 185.183.157.214;
 set_real_ip_from 185.183.159.40;
-set_real_ip_from 185.183.192.147;
 set_real_ip_from 185.191.204.254;
 set_real_ip_from 185.191.239.172;
 set_real_ip_from 185.191.239.49;
@@ -826,7 +825,6 @@ set_real_ip_from 204.8.96.87;
 set_real_ip_from 204.8.96.88;
 set_real_ip_from 204.8.96.89;
 set_real_ip_from 205.185.113.180;
-set_real_ip_from 205.185.113.8;
 set_real_ip_from 205.185.116.215;
 set_real_ip_from 205.185.116.34;
 set_real_ip_from 205.185.117.149;
@@ -834,7 +832,6 @@ set_real_ip_from 205.185.119.35;
 set_real_ip_from 205.185.121.170;
 set_real_ip_from 205.185.121.177;
 set_real_ip_from 205.185.123.93;
-set_real_ip_from 205.185.124.176;
 set_real_ip_from 206.166.251.193;
 set_real_ip_from 209.141.32.181;
 set_real_ip_from 209.141.32.198;
@@ -913,7 +910,6 @@ set_real_ip_from 23.191.200.16;
 set_real_ip_from 23.191.200.17;
 set_real_ip_from 23.191.200.18;
 set_real_ip_from 23.191.200.19;
-set_real_ip_from 23.191.200.2;
 set_real_ip_from 23.191.200.20;
 set_real_ip_from 23.191.200.21;
 set_real_ip_from 23.191.200.22;
@@ -921,13 +917,9 @@ set_real_ip_from 23.191.200.23;
 set_real_ip_from 23.191.200.24;
 set_real_ip_from 23.191.200.25;
 set_real_ip_from 23.191.200.26;
-set_real_ip_from 23.191.200.27;
-set_real_ip_from 23.191.200.29;
-set_real_ip_from 23.191.200.3;
-set_real_ip_from 23.191.200.30;
+set_real_ip_from 23.191.200.28;
+set_real_ip_from 23.191.200.31;
 set_real_ip_from 23.191.200.4;
-set_real_ip_from 23.191.200.5;
-set_real_ip_from 23.191.200.6;
 set_real_ip_from 23.191.200.7;
 set_real_ip_from 23.191.200.8;
 set_real_ip_from 23.191.200.9;
@@ -1020,12 +1012,14 @@ set_real_ip_from 2605:6400:30:f1fa:f57f:d285:3ed9:ee27;
 set_real_ip_from 2605:6400:30:f38b:28b3:cd24:51f3:e412;
 set_real_ip_from 2605:6400:30:f3d3:7c3:507c:6f32:c132;
 set_real_ip_from 2605:6400:30:f414:bf7c:cd6f:39bc:c682;
+set_real_ip_from 2605:6400:30:f440:757e:adf1:55f7:5a31;
 set_real_ip_from 2605:6400:30:f49b:e2ee:34f8:c854:6f63;
 set_real_ip_from 2605:6400:30:f4ae:8f7b:cc6e:d1d7:b978;
 set_real_ip_from 2605:6400:30:f503::1;
 set_real_ip_from 2605:6400:30:f51a:f826:ecfc:47b6:92a9;
 set_real_ip_from 2605:6400:30:f534:ae1d:c3d9:9941:d85e;
 set_real_ip_from 2605:6400:30:f57d:916e:73f8:d5e7:675b;
+set_real_ip_from 2605:6400:30:f5a3:5bb1:af4e:c969:c73e;
 set_real_ip_from 2605:6400:30:f5db:25a1:b884:ef2d:8818;
 set_real_ip_from 2605:6400:30:f623:5a78:29a6:8492:27b0;
 set_real_ip_from 2605:6400:30:f753:891d:ee77:e97c:741a;
@@ -1276,7 +1270,6 @@ set_real_ip_from 2a05:541:110:3e::1;
 set_real_ip_from 2a05:541:112:31::1;
 set_real_ip_from 2a05:b0c7:6388::1;
 set_real_ip_from 2a05:b0c7:655b::1;
-set_real_ip_from 2a05:b0c7:67c6::1;
 set_real_ip_from 2a05:b0c7:6949::1;
 set_real_ip_from 2a05:b0c7:6bd4::1;
 set_real_ip_from 2a05:b0c7:6cc4::1;
@@ -1475,6 +1468,7 @@ set_real_ip_from 2a0e:97c0:3e3:460:1337:b00b:1337:1;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b01b:1337:2;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b02b:1337:3;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b03b:1337:4;
+set_real_ip_from 2a0e:97c0:3e3:460:1337:b04b:1337:5;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b05b:1337:6;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b10b:1337:8;
 set_real_ip_from 2a0e:97c0:3e3:460:1337:b20b:1337:9;
@@ -1483,6 +1477,7 @@ set_real_ip_from 2a0e:97c0:3e3:460:1337:b40b:1337:11;
 set_real_ip_from 2a0e:97c0:3e3:a0e::1;
 set_real_ip_from 2a0e:97c0:3e3:b6::1;
 set_real_ip_from 2a0e:97c0:3ea:882::1;
+set_real_ip_from 2a0e:97c0:470::28;
 set_real_ip_from 2a0e:97c0:470::30;
 set_real_ip_from 2a0e:b107:dd0::3:fa35:9316;
 set_real_ip_from 2a0e:bfc0:0:11::796d;
@@ -1618,6 +1613,7 @@ set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.133.242;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.13.225.69;
+set_real_ip_from 45.13.225.78;
 set_real_ip_from 45.133.74.53;
 set_real_ip_from 45.134.225.36;
 set_real_ip_from 45.137.70.158;
@@ -1887,6 +1883,7 @@ set_real_ip_from 93.123.109.116;
 set_real_ip_from 93.123.12.112;
 set_real_ip_from 93.185.165.211;
 set_real_ip_from 93.88.75.35;
+set_real_ip_from 93.90.74.28;
 set_real_ip_from 93.90.74.29;
 set_real_ip_from 93.95.227.37;
 set_real_ip_from 93.95.228.125;
