--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -84,7 +84,6 @@ allow 109.71.252.88;
 allow 109.71.252.97;
 allow 114.172.205.8;
 allow 114.35.245.150;
-allow 118.163.74.160;
 allow 118.193.64.139;
 allow 121.78.28.166;
 allow 123.253.35.32;
@@ -217,6 +216,7 @@ allow 180.150.226.99;
 allow 185.100.85.132;
 allow 185.100.87.136;
 allow 185.100.87.166;
+allow 185.100.87.174;
 allow 185.100.87.41;
 allow 185.10.16.41;
 allow 185.104.120.10;
@@ -528,6 +528,7 @@ allow 194.15.113.118;
 allow 194.15.115.212;
 allow 194.15.36.117;
 allow 194.26.192.77;
+allow 194.53.137.102;
 allow 194.87.55.98;
 allow 195.160.220.104;
 allow 195.176.3.23;
@@ -679,7 +680,6 @@ allow 2001:67c:e60:c0c:192:42:116:217;
 allow 2001:67c:e60:c0c:192:42:116:218;
 allow 2001:67c:e60:c0c:192:42:116:219;
 allow 2001:b011:4006:545c::b;
-allow 2001:b030:2422::7234;
 allow 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
 allow 2001:bf0:666::666;
 allow 2001:df7:7400:c10d:216:3eff:fecd:511a;
@@ -875,7 +875,6 @@ allow 23.191.200.16;
 allow 23.191.200.17;
 allow 23.191.200.18;
 allow 23.191.200.19;
-allow 23.191.200.2;
 allow 23.191.200.20;
 allow 23.191.200.21;
 allow 23.191.200.22;
@@ -883,14 +882,8 @@ allow 23.191.200.23;
 allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
-allow 23.191.200.27;
-allow 23.191.200.28;
-allow 23.191.200.3;
-allow 23.191.200.30;
-allow 23.191.200.31;
+allow 23.191.200.29;
 allow 23.191.200.4;
-allow 23.191.200.5;
-allow 23.191.200.6;
 allow 23.191.200.7;
 allow 23.191.200.8;
 allow 23.191.200.9;
@@ -1198,6 +1191,7 @@ allow 2a05:b0c7:67c6::1;
 allow 2a05:b0c7:6949::1;
 allow 2a05:b0c7:6bd4::1;
 allow 2a05:b0c7:6cc4::1;
+allow 2a06:1700:0:16::1;
 allow 2a06:1700:0:3c::1;
 allow 2a06:1700:0:47::166;
 allow 2a06:1700:0:50::11;
@@ -1378,6 +1372,7 @@ allow 2a0d:bbc7::f816:3eff:fee6:ca14;
 allow 2a0d:bbc7::f816:3eff:fee9:3e45;
 allow 2a0d:bbc7::f816:3eff:fef2:6521;
 allow 2a0d:c2c0:1:4::2;
+allow 2a0e:1d80:13:b6d5::1;
 allow 2a0e:4005:1002:ffff:185:40:4:100;
 allow 2a0e:4005:1002:ffff:185:40:4:101;
 allow 2a0e:4005:1002:ffff:185:40:4:127;
@@ -1392,6 +1387,8 @@ allow 2a0e:4005:1002:ffff:185:40:4:92;
 allow 2a0e:97c0:3e3:460:1337:b00b:1337:1;
 allow 2a0e:97c0:3e3:460:1337:b01b:1337:2;
 allow 2a0e:97c0:3e3:460:1337:b02b:1337:3;
+allow 2a0e:97c0:3e3:460:1337:b03b:1337:4;
+allow 2a0e:97c0:3e3:460:1337:b04b:1337:5;
 allow 2a0e:97c0:3e3:460:1337:b05b:1337:6;
 allow 2a0e:97c0:3e3:460:1337:b10b:1337:8;
 allow 2a0e:97c0:3e3:460:1337:b20b:1337:9;
@@ -1499,6 +1496,7 @@ allow 2c0f:6c0:0:d::d28b;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.184.236.104;
+allow 31.220.75.237;
 allow 31.44.238.25;
 allow 35.0.127.52;
 allow 37.114.50.124;
@@ -1525,7 +1523,6 @@ allow 38.135.25.142;
 allow 38.135.25.143;
 allow 38.135.25.144;
 allow 38.135.25.2;
-allow 38.242.254.131;
 allow 38.97.116.242;
 allow 38.97.116.243;
 allow 38.97.116.244;
@@ -1535,6 +1532,8 @@ allow 45.11.59.28;
 allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.132.246.245;
+allow 45.13.225.69;
+allow 45.13.225.78;
 allow 45.133.74.53;
 allow 45.134.225.36;
 allow 45.137.70.158;
@@ -1653,6 +1652,7 @@ allow 5.101.82.22;
 allow 5.104.84.183;
 allow 5.104.86.6;
 allow 51.15.59.15;
+allow 51.195.166.174;
 allow 51.222.142.67;
 allow 51.38.225.46;
 allow 51.81.222.62;
@@ -1831,3 +1831,4 @@ allow 95.168.173.143;
 allow 95.211.174.137;
 allow 95.211.244.28;
 allow 98.128.173.33;
+allow 98.71.178.101;
